# daqa

./: .gitignore  README.md  pyproject.toml
daqa/: __init__.py  bz2_to_sqlite.py  eval.py  generate.py
