[project]
name = "daqa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rasmus Larsen", email = "rasmus.larsen@alexandra.dk" }
]
dependencies = [
    "requests>=2.32.3",
    "mwparserfromhell>=0.6.6",
    "openai>=1.35.10",
    "tqdm>=4.66.4",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.5",
    "aiofiles>=24.1.0",
    "async-timeout>=4.0.3",
    "datasets>=2.20.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["daqa/"]
